<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2_consultas">

    <TextView
        android:id="@+id/bbdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_bbdd"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linear_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linear_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/til_bbbdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bbdd"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textview_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_col_2"
        android:padding="5sp"
        android:textSize="25sp"
        android:background="@drawable/bordes_text_view"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/textview_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_col_3"
        android:padding="5sp"
        android:textSize="25sp"
        android:background="@drawable/bordes_text_view"
        android:textColor="@color/black"
        />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bbbdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutbd"
        app:boxStrokeColor="@color/color_primary"
        android:textColorHint="@color/color_primary"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:endIconMode="clear_text"
        android:hint="@string/insert_col_1"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tit_col"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayoutbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_vover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_bbbdd">

        <Button
            android:id="@+id/btn_consultar"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/consultar_bbdd"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            />


    </LinearLayout>
    <Button
        android:id="@+id/btn_vover"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/volver"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutbd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>